--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <title>My Dev Skills</title>
 </head>
 <body>
-    
+    <main>
+        <h1>MY DEVELOPER SKILLS</h1>
+        <ul>
+            <li><span>X </span>JavaScript (ES6)</li>
+            <li><span>X </span>Cascading Style Sheets (CSS3)</li>
+            <li><span>X </span>Hyper Text Markup Language (HTML5)</li>
+        </ul>
+        <input type="text">
+        <button>ADD SKILL</button>
+    </main>
 </body>
 </html>
